--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/leaflet": "^1.7.6",
+    "@types/leaflet.markercluster": "^1.4.6",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
+    "crypto-js": "^4.1.1",
     "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
