--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/crypto-js": "^4.0.2",
     "@types/jest": "^26.0.15",
     "@types/leaflet": "^1.7.6",
     "@types/leaflet.markercluster": "^1.4.6",
