--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "2021-the-f2e-week-2",
+  "homepage": "https://yiminprogram.github.io/2021-the-f2e-week-2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
+    "gh-pages": "^3.2.3",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
     "react": "^17.0.2",
@@ -37,6 +39,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
